ndb - bug#21172   Handle also open && !OM_INIT wrt non function O_DIRECT

storage/ndb/src/kernel/blocks/ndbfs/AsyncFile.cpp:
  Fix open wrt O_DIRECT